# agent-redteam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MOAT.md  RESEARCH.md  UPGRADE_RESEARCH.md  UPGRADE_RESEARCH_2.md
examples/: agentic-guardrails.yaml  agentic-target.yaml  agentic_rag_poc.py  live_agentic_poc.py  live_support_ticket_poc.py  local_agent.py  openai-live-poc.yaml  target.fake.yaml  target.http.yaml  target.openai.yaml
src/agent_redteam/: __init__.py  budget.py  cli.py  config.py  findings.py  mcp_server.py  registry.py  remediation.py  report.py  runner.py  server.py  types.py
src/agent_redteam/adaptive/: __init__.py  agentic.py  attackers.py  engine.py  types.py
src/agent_redteam/agentic/: __init__.py  callable_target.py  engine.py  fake.py  hooks.py  oracle.py  proof.py  protocols.py  trace.py  types.py
src/agent_redteam/attacks/: __init__.py  adaptive.py  agentic.py  base.py  exfiltration.py  jailbreak.py  multi_turn.py  obfuscation.py  prompt_injection.py  resource_exhaustion.py  tool_abuse.py
src/agent_redteam/guardrails/: __init__.py  base.py  configuration.py  input_guards.py  output_guards.py  presets.py  tool_guards.py
src/agent_redteam/oracles/: __init__.py  base.py  canary.py  composite.py  judge.py  openai_judge.py  (+2 more)
tests/: test_adaptive.py  test_adaptive_agentic.py  test_agentic.py  test_agentic_support_ticket.py  test_attacks.py  test_baseline.py  test_cli.py  test_core.py  test_guardrail_config.py  test_guardrails.py  test_judge_openai.py  test_oracles.py  test_server.py  test_targets.py
(+10 files in other folders)
